# studyproject-ws25

./: .gitignore  README.md  adding_data.py  climate_change.txt  data-climate-change.csv  document_embedding.py  document_loader.py  document_retriever.py  document_splitter.py  embed_model.py  evaluation_dataset.py  evaluation_metrics.py  evaluation_refutes_ground_truth.py  evaluation_wrappers.py  llm_model.py  pyproject.toml  rag_pipeline.py  user_interface.py  vector_database.py
chroma_db/: chroma.sqlite3
data/: climate-fever-refutes-groundtruth.jsonl
