[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.2.1",
    "datasets>=4.4.1",
    "evaluate>=0.4.6",
    "huggingface-hub>=0.34,<1.0",
    "langchain>=1.0.2",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4",
    "langchain-core>=1.0.0",
    "langchain-huggingface>=1.0.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.1",
    "numpy>=2.3.4",
    "ollama>=0.6.0",
    "pandas>=2.3.3",
    "pypdf>=6.1.3",
    "python-dotenv>=1.1.1",
    "ragas>=0.3.9",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.50.0",
    "transformers>=4.56,<4.58",
]
