[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.2.1",
    "datasets>=4.4.1", # need at least 4.x for ragas
    "evaluate>=0.4.6",
    "huggingface-hub>=0.34,<1.0", # solved ragas compatibility issue
    "langchain>=1.0.2",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4",
    "langchain-core>=1.0.0",
    "langchain-huggingface>=1.0.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.1",
    "nltk>=3.9.2", # needed for ragas
    "numpy>=2.3.4",
    "mistralai>=1.9.11",
    "ollama>=0.6.0",
    "pandas>=2.3.3",
    "pypdf>=6.1.3",
    "python-dotenv>=1.1.1",
    "ragas>=0.3.9",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.50.0",
    "transformers>=4.56,<4.58", # solved ragas compatibility issue
]
